summary block size and layout issue solved

--- a/src/app/components/summary-block/summary-block.component.scss
+++ b/src/app/components/summary-block/summary-block.component.scss
@@ -1,9 +1,9 @@
 // @import "../../../scss/config";
-.container {
-  max-width: 500px;
+.card-container {
+  width: 100%;
   font-size: 14px;
   padding: 30px;
-  // background-color: #f2fbff;
+  background-color: #f2fbff;
 
   .title {
     font-size: 20px;
